# seoul-bike-mlops

./: .dockerignore  .gitignore  DEMO.md  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  metrics.json  params.yaml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_monitoring.ipynb
src/seoul_bike_mlops/: __init__.py  evaluate.py  features.py  ingest.py  monitor.py  registry.py  serve.py  train.py  validate.py
tests/: test_api.py  test_features.py  test_train.py  test_validate.py
