[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seoul-bike-mlops"
version = "0.1.0"
description = "MLOps pipeline for forecasting Seoul bike-share demand"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "requests",
    "pyyaml",
    "pandera",
    "dvc",
    "mlflow",
]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn[standard]", "pydantic", "skops"]
monitor = ["evidently"]
dev = ["pytest", "ruff", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
# notebooks are exploratory -- top-level expressions and semicolon-suppressed
# plots are normal there, so they're not held to the same lint rules as src/
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
